2007-04-15 01:39:37  Sean Middleditch <elanthis@awesomeplay.com>

  * Fixes for compiling on amd64.  Wouldn't be half surprised if
    it stopped compiling on ia32 now.

2007-03-13 08:09:52  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed control interace.  We don't use it, why bother keeping
    the cruft?

2007-03-12 08:12:05  Sean Middleditch <elanthis@awesomeplay.com>

  * Makefile wasn't include skills.xml - fix that.
  * Fixed make install for script files.
  * Moved character traits into C++.

2007-02-21 06:38:11  Sean Middleditch <elanthis@awesomeplay.com>

  * Updates skill system to no longer load them from an external
    file.  The C++ code needs access to the skills, so we need to
    have IDs and such as compile time.  Skill definitions are now
    located in src/xml/skills.xml.

2007-02-17 20:34:21  Sean Middleditch <elanthis@awesomeplay.com>

  * Renamed the parse system to the macro system, which is far
    less confusing.
  * Clean up of XML source file names and generated file names.

2007-02-15 07:41:56  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove request and command events.
  * Modify event structure to have only a single defined element,
    the recipient Entity, and then auxillary data on top of that.
  * All events are placed on a queue; no event will be immediately
    processed.
  * Broadcast events are broadcast immediately, but none of the
    resulting events are processed immediately.
  * Added missing NPC efactory.
  * Moved generated headers sources into a separate destination
    hierarchy, in include/generated/ and src/generated/.
  * Added new header with toValue() function which can convert
    any wrapped type to a Value so that they may be easily sent
    to callback functions.

2007-02-12 06:13:12  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed IDMAP use for Event IDs.  They are now hard-coded
    from the events-list.xml source file.  No more registering
    them at run-time.